third_party/rust/pin-project/tests/ui/cfg/cfg_attr-resolve.stderr
error[E0599]: no method named `project` found for struct `Pin<&mut Foo<u8>>` in the current scope
  --> tests/ui/cfg/cfg_attr-resolve.rs:10:31
   |
10 |     let _x = Pin::new(&mut x).project(); //~ ERROR E0599
   |                               ^^^^^^^ method not found in `Pin<&mut Foo<u8>>`
